--- a/movie/.gitignore
+++ b/movie/.gitignore
@@ -38,6 +38,10 @@ testem.log
 /typings
 angular.json
 
+# Environment files
+/src/environments/environment.ts
+/src/environments/environment.development.ts
+
 # System files
 .DS_Store
 Thumbs.db
